--- a/style.css
+++ b/style.css
@@ -24,3 +24,59 @@
     padding: 9px 25px;
     cursor: pointer;
 }
+
+.cat1, .cat2, .cat3{
+    padding: 10px 30px;
+    border-radius: 10px;
+}
+
+.cat1{
+    background-image: linear-gradient(to right, rgb(240, 136, 32), #FFBE22);
+    
+}
+
+.cat2{
+    background-image: linear-gradient(to bottom, #ff589b, #ff136f);
+}
+
+.cat3{
+    background-image: linear-gradient(to bottom, #7e59d4, #0a0ed6);
+}
+
+.categories h1{
+    color: #FFF;
+}
+
+.categories img{
+    width: 100px;
+}
+
+.card{
+    border: none;
+    box-shadow: 5px 5px 10px lightgray;
+    border-radius: 10px;
+}
+
+
+.card-footer {
+    padding: .75rem 1.25rem;
+    background-color: #FFF;
+    border-top: none;
+}
+
+#subscribe{
+    height: 300px;
+}
+
+#subscribe h6{
+    color: gray;
+}
+
+.sub-btn{
+    margin-top: 5px;
+}
+
+
+footer{
+    text-align: center;
+}
